--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <div class = "btn green" id= "green"type = "button">2</div>
             <div class = "btn purple" id = "purple"type = "button">4</div>
         </div>
-        <script src = "app.js"></script>
     </div>
+        <div class = "start">
+            <button>Start game</button>
+        </div>
+        <script src = "app.js"></script>
 </body>
 </html>
